--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -43,22 +43,25 @@ export PKG_CONFIG_PATH="$PKG_CONFIG_PATH:/usr/local/opt/ruby/lib/pkgconfig"
 {{ end }}
 export TERM=xterm-256color
 export BAT_THEME=ansi
-export MANPAGER="sh -c 'col -bx | bat -l man -p'"
+
+if command -v bat 2>&1 >/dev/null; then
+  alias cat="bat"
+  export MANPAGER="sh -c 'sed -u -e \"s/\\x1B\[[0-9;]*m//g; s/.\\x08//g\" | bat -p -lman'"
+fi
+if command -v batcat 2>&1 >/dev/null; then
+  alias cat="batcat"
+  export MANPAGER="sh -c 'sed -u -e \"s/\\x1B\[[0-9;]*m//g; s/.\\x08//g\" | batcat -p -lman'"
+fi
 {{ if eq .chezmoi.os "linux" }}
 {{   if (.chezmoi.kernel.osrelease | lower | contains "microsoft") }}
 export BROWSER=wslview
+export PATH=$PATH:/opt/nvim-linux-x86_64/bin
 {{   end }}
 {{ end }}
 ## Aliases
 alias ls='lsd'
 alias dockerclear='docker stop $(docker ps -aq) && docker rm $(docker ps -aq)'
 alias dockercleardangling='docker rmi $(docker images -q -f dangling=true)'
-alias vim=nvim
-{{ if eq .chezmoi.os "darwin" }}
-alias cat="bat"
-{{ else }}
-alias cat="batcat"
-{{ end }}
 alias imgcat="wezterm imgcat"
 
 ## Evals
@@ -92,7 +95,7 @@ listening() {
   source <(fzf --zsh)
 {{ end }}
 batdiff() {
-    git diff --name-only --relative --diff-filter=d | xargs bat --diff
+    git diff --name-only --relative --diff-filter=d | xargs cat --diff
 }
 # >>> conda initialize >>>
 # !! Contents within this block are managed by 'conda init' !!
