Add .config/fish/completions/fisher.fish Add .config/fish/completions/nvm.fish Add .config/fish/conf.d/nvm.fish Add .config/fish/config.fish Add .config/fish/fish_plugins Add .config/fish/fish_variables Add .config/fish/functions/_nvm_index_update.fish Add .config/fish/functions/_nvm_list.fish Add .config/fish/functions/_nvm_version_activate.fish Add .config/fish/functions/_nvm_version_deactivate.fish Add .config/fish/functions/fisher.fish Add .config/fish/functions/nvm.fish Add .config/fish/themes/.keep Update .config/wezterm/wezterm.lua Update .ssh/config

--- a/private_dot_ssh/config.tmpl
+++ b/private_dot_ssh/config.tmpl
@@ -1,18 +1,22 @@
-{{ if eq .chezmoi.os "darwin" }}
+{{ if eq .location "home" -}}
 Include ~/.orbstack/ssh/config
 Host midway-station
   Hostname midway-station
   User biqu
   IdentityFile ~/.ssh/id_ed25519
-{{ end }}
-{{ if ne .location "server" }}
+Host jumper
+  Hostname jumper
+  User sdickinson
+  IdentityFile ~/.ssh/id_ed25519
+{{ end -}}
+{{ if ne .location "server" -}}
 Host github.com
   AddKeysToAgent yes
-{{ if eq .location "work" }} 
+{{   if eq .location "work" -}} 
   IdentityFile ~/.ssh/id_ed25519_shine
-{{ else }}
+{{   else -}}
   IdentityFile ~/.ssh/id_ed25519_personal
-{{ end }}
+{{   end -}}
 Host personal.github.com
   Hostname github.com
   AddKeysToAgent yes
@@ -27,4 +31,4 @@ Host sdickinson.com
 Host 172.236.35.111
   AddKeysToAgent yes
   IdentityFile ~/.ssh/id_ed25519
-{{ end }}
+{{ end -}}
