--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -152,7 +152,7 @@ config.set_environment_variables = {
 -- config.color_scheme = 'Solarized Dark Higher Contrast'
 -- config.color_scheme = 'Spacedust'
 config.color_scheme = 'Tokyo Night Moon'
-config.font = wezterm.font("FiraCode Nerd Font Mono", { weight = "Regular", stretch = "Normal", style = "Normal" })
+config.font = wezterm.font("GeistMono NFM", { weight = "Regular", stretch = "Normal", style = "Normal" })
 {{ end }}
 -- config.color_scheme = 'Atelier Dune (base16)'
 {{ if eq .chezmoi.os "linux" }}
