Update .chezmoidata/packages.yaml Add .config/nvim/lua/plugins/ogpt.lua Update .config/wezterm/wezterm.lua Update .zshrc Add nvim-linux-x86_64.tar.gz Update install-packages.sh Change attributes of .config/fish/config.fish

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -94,6 +94,9 @@ listening() {
 {{ else }}
   source <(fzf --zsh)
 {{ end }}
+{{ if and (eq .chezmoi.os "linux") (eq .chezmoi.arch "amd64") -}}
+eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
+{{ end }} 
 batdiff() {
     git diff --name-only --relative --diff-filter=d | xargs cat --diff
 }
