--- a/dot_config/private_fish/config.fish.tmpl
+++ b/dot_config/private_fish/config.fish.tmpl
@@ -1,10 +1,21 @@
-set PATH /usr/local/opt/vim/bin /usr/local/opt/ruby/bin /usr/local/opt/git/bin/ /usr/local/opt/gnu-tar/libexec/gnubin $PATH ~/bin/ /Applications/WezTerm.app/Contents/MacOS
-set -g MANPAGER "sh -c 'col -bx | bat -l man -p --theme 'ansi''"
+set -g PATH /usr/local/opt/vim/bin /usr/local/opt/ruby/bin /usr/local/opt/git/bin/ /usr/local/opt/gnu-tar/libexec/gnubin $PATH /home/sdickinson/bin/
+{{ if eq .chezmoi.os "darwin" }}
+set -g PATH $PATH /Applications/WezTerm.app/Contents/MacOS
+set -g PNPM_HOME /Users/sdickinson/Library/pnpm
 set -g LDFLAGS "$LDFLAGS -L/opt/homebrew/opt/ruby/lib"
 set -g CPPFLAGS "$CPPFLAGS -I/opt/homebrew/opt/ruby/include"
 set -g PKG_CONFIG_PATH "$PKG_CONFIG_PATH:/opt/homebrew/opt/ruby/lib/pkgconfig"
+{{ end }}
+{{ if eq .chezmoi.os "linux" }}
+nvm use 22
+set -g PATH $PATH /home/linuxbrew/.linuxbrew/bin/ "/home/sdickinson/.local/share/nvm/$(nvm current)/lib/node_modules/corepack/shims/"
+{{   if (.chezmoi.kernel.osrelease | lower | contains "microsoft") }}
+set -g BROWSER wslview
+# set PATH $PATH /opt/nvim-linux-x86_64/bin
+{{   end }}
+{{ end }}
+set -g MANPAGER "sh -c 'col -bx | bat -l man -p --theme 'ansi''"
 set -g TERM xterm-256color
-set -g PNPM_HOME /Users/sdickinson/Library/pnpm
 
 if status is-interactive
     # Commands to run in interactive sessions can go here
