--- a/dot_config/private_fish/config.fish.tmpl
+++ b/dot_config/private_fish/config.fish.tmpl
@@ -21,8 +21,8 @@ if status is-interactive
     # Commands to run in interactive sessions can go here
     ~/bin/run_once_daily.sh
 
-    alias ls=lsd
-    alias cat=bat
+    alias ls lsd
+    alias cat bat
     wezterm shell-completion --shell fish | source
     fzf --fish | source
     oh-my-posh init fish --config ~/.config/slim.omp.json | source
