Add LEADER, SHIFT H & L key bindings

--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -235,6 +235,16 @@ config.keys = {
     mods = 'LEADER|SHIFT',
     action = act.ActivateTabRelative(-1),
   },
+  {
+    key = 'l',
+    mods = 'LEADER|SHIFT',
+    action = act.ActivateTabRelative(1),
+  },
+  {
+    key = 'h',
+    mods = 'LEADER|SHIFT',
+    action = act.ActivateTabRelative(-1),
+  },
   { 
     key = 'r',
     mods = 'LEADER',
