--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -2,31 +2,31 @@
 export PATH=~/bin:/usr/local/opt/vim/bin:/usr/local/opt/ruby/bin:/usr/local/opt/git/bin/:/usr/local/opt/gnu-tar/libexec/gnubin:$PATH
 
 ~/bin/run_once_daily.sh
-
+source /opt/homebrew/share/zsh-autocomplete/zsh-autocomplete.plugin.zsh
 # Enable Powerlevel10k instant prompt. Should stay close to the top of ~/.zshrc.
 # Initialization code that may require console input (password prompts, [y/n]
 # confirmations, etc.) must go above this block; everything else may go below.
-if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]; then
-  source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
-fi
+# if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]; then
+#   source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
+# fi
 
 # Path to your oh-my-zsh installation.
-export ZSH=~/.oh-my-zsh
+# export ZSH=~/.oh-my-zsh
 
 # ZSH_THEME="powerlevel10k/powerlevel10k"
-plugins=(
-  git
-  docker
-  #docker-compose
-  #aws
-  #brew
-  #npm
-  #yarn
-  zsh-autosuggestions
-  zsh-syntax-highlighting
-)
+# plugins=(
+#   git
+#   docker
+#   #docker-compose
+#   #aws
+#   #brew
+#   #npm
+#   #yarn
+#   zsh-autosuggestions
+#   zsh-syntax-highlighting
+# )
 
-source $ZSH/oh-my-zsh.sh
+# source $ZSH/oh-my-zsh.sh
 . "$HOME/.cargo/env"
 # User configuration
 ## Exports
@@ -100,6 +100,7 @@ eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
 batdiff() {
     git diff --name-only --relative --diff-filter=d | xargs cat --diff
 }
+{{ if eq .location "home" -}}
 # >>> conda initialize >>>
 # !! Contents within this block are managed by 'conda init' !!
 __conda_setup="$('/Users/sdickinson/miniconda3/bin/conda' 'shell.zsh' 'hook' 2> /dev/null)"
@@ -114,6 +115,7 @@ else
 fi
 unset __conda_setup
 # <<< conda initialize <<<
+{{ end -}}
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 # [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
@@ -131,3 +133,4 @@ esac
 # eval "$(oh-my-posh init zsh)"
 # eval "$(oh-my-posh init zsh --config ~/.config/multiverse-neon.omp.json)"
 eval "$(oh-my-posh init zsh --config ~/.config/slim.omp.json)"
+source /opt/homebrew/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
