Change if statement

--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -1,6 +1,6 @@
 #!/bin/bash
 {{ if or (eq .chezmoi.os "darwin") (eq .chezmoi.arch "amd64") -}}
-if [ command -v brew 2>&1 >/dev/null ]; then
+if command -v brew 2>&1 >/dev/null; then
   brew update
   brew upgrade
 else
