--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -10,7 +10,7 @@ else
   {{ end -}}
 fi
 
-brew bundle install --file=/dev/stdin <<EOF
+brew bundle --file=/dev/stdin <<EOF
 {{  range .packages.core.brew -}}
 brew {{ . | quote }}
 {{  end -}}
