--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -65,4 +65,5 @@ eval $(op account add --address my.1password.com --email sdickinson@gmail.com --
   curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
   op read "op://Private/Sdickinson Server Private Key/public key" >~/.ssh/id_ed25519_personal.pub
   op read "op://Private/Shine Github Key/public key" >~/.ssh/id_ed25519_shine.pub
+  op read "op://Private/Reece Github Key/public key" >~/.ssh/id_ed25519_reece.pub
 {{ end -}}
