--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -7,12 +7,8 @@ export BREWPATH=~/homebrew
 export BREWPATH=/opt/homebrew
 {{ end -}}
 export PATH=$PATH:$BREWPATH/bin
+export XDG_CACHE_HOME=~/.cache
 ~/bin/run_once_daily.sh
-zle -N menu-search
-zle -N recent-paths
-source $BREWPATH/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
-source $BREWPATH/share/zsh-autocomplete/zsh-autocomplete.plugin.zsh
-source $BREWPATH/share/zsh-autosuggestions/zsh-autosuggestions.zsh
 # Enable Powerlevel10k instant prompt. Should stay close to the top of ~/.zshrc.
 # Initialization code that may require console input (password prompts, [y/n]
 # confirmations, etc.) must go above this block; everything else may go below.
@@ -74,13 +70,16 @@ export PATH=$PATH:/opt/nvim-linux-x86_64/bin
 {{ end }}
 ## Aliases
 alias ls='lsd'
+alias lsa='ls -lah'
+alias l='ls -lah'
+alias ll='ls -lh'
+alias la='ls -lAh'
 alias dockerclear='docker stop $(docker ps -aq) && docker rm $(docker ps -aq)'
 alias dockercleardangling='docker rmi $(docker images -q -f dangling=true)'
 alias imgcat="wezterm imgcat"
 
 ## Evals
 eval $(thefuck --alias)
-eval $(wezterm shell-completion --shell zsh)
 
 [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # This loads nvm
 
@@ -101,10 +100,17 @@ listening() {
 
 {{ if and (eq .chezmoi.os "linux") (eq .chezmoi.arch "amd64") -}}
 eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
-{{ end }} 
+{{ else if (eq .chezmoi.os "darwin") -}}
+eval "$(brew shellenv)"
+{{ end -}} 
 batdiff() {
     git diff --name-only --relative --diff-filter=d | xargs cat --diff
 }
+zle -N menu-search
+zle -N recent-paths
+source $BREWPATH/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
+source $BREWPATH/share/zsh-autocomplete/zsh-autocomplete.plugin.zsh
+source $BREWPATH/share/zsh-autosuggestions/zsh-autosuggestions.zsh
 {{ if eq .location "home" -}}
 # >>> conda initialize >>>
 # !! Contents within this block are managed by 'conda init' !!
@@ -157,6 +163,23 @@ bindkey -a \
 zstyle ':autocomplete:*complete*:*' insert-unambiguous yes
 zstyle ':completion:*' list-colors ''
 zstyle ':completion:*' list-colors "${(s.:.)LS_COLORS}"
+zstyle ':completion:*' use-cache on
+zstyle ':completion:*' cache-path "$XDG_CACHE_HOME/zsh/.zcompcache"
+zstyle ':completion:*' special-dirs true
+zstyle ':completion:*' list-colors ''
+zstyle ':completion:*:*:kill:*:processes' list-colors '=(#b) #([0-9]#) ([0-9a-z-]#)*=01;34=0=01'
+# Don't complete uninteresting users
+zstyle ':completion:*:*:*:users' ignored-patterns \
+        adm amanda apache at avahi avahi-autoipd beaglidx bin cacti canna \
+        clamav daemon dbus distcache dnsmasq dovecot fax ftp games gdm \
+        gkrellmd gopher hacluster haldaemon halt hsqldb ident junkbust kdm \
+        ldap lp mail mailman mailnull man messagebus mldonkey mysql nagios \
+        named netdump news nfsnobody nobody nscd ntp nut nx obsrun openvpn \
+        operator pcap polkitd postfix postgres privoxy pulse pvm quagga radvd \
+        rpc rpcuser rpm rtkit scard shutdown squid sshd statd svn sync tftp \
+        usbmux uucp vcsa wwwrun xfs '_*'
+# ... unless we really want to.
+zstyle '*' single-ignored show
 {{ if eq .chezmoi.os "linux" }}
 {{   if (.chezmoi.kernel.osrelease | lower | contains "microsoft") }}
    source <(fzf --zsh)
@@ -166,3 +189,5 @@ zstyle ':completion:*' list-colors "${(s.:.)LS_COLORS}"
 {{ else }}
   source <(fzf --zsh)
 {{ end }}
+
+source <(wezterm shell-completion --shell zsh)
