--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -152,12 +152,14 @@ config.set_environment_variables = {
 -- config.color_scheme = 'Solarized Dark Higher Contrast'
 -- config.color_scheme = 'Spacedust'
 config.color_scheme = 'Tokyo Night Moon'
-config.font = wezterm.font("GeistMono NFM", { weight = "Regular", stretch = "Normal", style = "Normal" })
+config.font = wezterm.font("Cascadia Code NF", { weight = "Regular", stretch = "Normal", style = "Normal" })
+config.harfbuzz_features = { 'ss19' }
 {{ end }}
 -- config.color_scheme = 'Atelier Dune (base16)'
 {{ if eq .chezmoi.os "linux" }}
 config.color_scheme = 'SolarizedDark (Gogh)'
-config.font = wezterm.font("GeistMono NF", { weight = "Regular", stretch = "Normal", style = "Normal" })
+config.font = wezterm.font("Cascadia Code NF", { weight = "Regular", stretch = "Normal", style = "Normal" })
+config.harfbuzz_features = { 'ss19' }
 {{ end }}
 config.leader = { key = "b", mods = "CTRL", timeout_milliseconds = 2000 }
 {{ if eq .chezmoi.os "darwin" }}
