--- a/dot_config/wezterm/wezterm.lua.tmpl
+++ b/dot_config/wezterm/wezterm.lua.tmpl
@@ -153,6 +153,7 @@ config.set_environment_variables = {
 -- config.color_scheme = 'Spacedust'
 config.color_scheme = 'Tokyo Night Moon'
 config.font = wezterm.font("Cascadia Code NF", { weight = "Regular", stretch = "Normal", style = "Normal" })
+config.font_size = 13
 config.harfbuzz_features = { 'ss19' }
 {{ end }}
 -- config.color_scheme = 'Atelier Dune (base16)'
@@ -160,6 +161,7 @@ config.harfbuzz_features = { 'ss19' }
 config.color_scheme = 'SolarizedDark (Gogh)'
 config.font = wezterm.font("Cascadia Code NF", { weight = "Regular", stretch = "Normal", style = "Normal" })
 config.harfbuzz_features = { 'ss19' }
+config.font_size = 13
 {{ end }}
 config.leader = { key = "b", mods = "CTRL", timeout_milliseconds = 2000 }
 {{ if eq .chezmoi.os "darwin" }}
