--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -5,6 +5,10 @@ export BREWPATH=/opt/homebrew
 export PATH=$PATH:$BREWPATH/bin
 export XDG_CACHE_HOME=~/.cache
 ~/bin/run_once_daily.sh
+{{ if eq .location "client" -}}
+export PATH=$HOME/.jenv/bin:$PATH
+eval "$(jenv init -)"
+{{ end -}}
 # Enable Powerlevel10k instant prompt. Should stay close to the top of ~/.zshrc.
 # Initialization code that may require console input (password prompts, [y/n]
 # confirmations, etc.) must go above this block; everything else may go below.
