--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -73,6 +73,7 @@ alias la='ls -lAh'
 alias dockerclear='docker stop $(docker ps -aq) && docker rm $(docker ps -aq)'
 alias dockercleardangling='docker rmi $(docker images -q -f dangling=true)'
 alias imgcat="wezterm imgcat"
+alias oo="cd ~/Documents/Obsidian/Personal/"
 
 ## Evals
 eval $(thefuck --alias)
