--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -195,3 +195,4 @@ source <(wezterm shell-completion --shell zsh)
 {{ if eq .location "client" -}}
 source ~/.aws/awslogin.sh
 {{ end -}}
+eval "$(zoxide init zsh)"
