--- a/dot_config/nvim/lua/plugins/ai.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/ai.lua.tmpl
@@ -64,9 +64,11 @@ return {
   event = "BufReadPost",
   opts = {
     suggestion = {
-      enabled = not vim.g.ai_cmp,
+      -- enabled = not vim.g.ai_cmp,
+      enabled = false,
       auto_trigger = true,
-      hide_during_completion = vim.g.ai_cmp,
+      -- hide_during_completion = vim.g.ai_cmp,
+      hide_during_completion = true,
       keymap = {
         accept = false, -- handled by nvim-cmp / blink.cmp
         next = "<M-]>",
@@ -76,7 +78,45 @@ return {
     panel = { enabled = false },
     filetypes = {
       markdown = true,
+      javascript = true,
+      typescript = true,
+      typescriptreact = true,
+      javascriptreact = true,
       help = true,
+    },
+  },
+},
+{
+  "zbirenbaum/copilot.lua",
+  opts = function()
+    LazyVim.cmp.actions.ai_accept = function()
+      if require("copilot.suggestion").is_visible() then
+        LazyVim.create_undo()
+        require("copilot.suggestion").accept()
+        return true
+      end
+    end
+  end,
+},
+{
+  "giuxtaposition/blink-cmp-copilot",
+},
+{
+  "saghen/blink.cmp",
+  optional = true,
+  dependencies = { "giuxtaposition/blink-cmp-copilot" },
+  opts = {
+    sources = {
+      default = { "copilot" },
+      providers = {
+        copilot = {
+          name = "copilot",
+          module = "blink-cmp-copilot",
+          kind = "Copilot",
+          score_offset = 100,
+          async = true,
+        },
+      },
     },
   },
 },
