--- a/dot_config/nvim/lua/plugins/ai.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/ai.lua.tmpl
@@ -1,3 +1,36 @@
+{{ if ne .location "client" -}}
+local kind_icons = {
+    -- LLM Provider icons
+    claude = '󰋦',
+    openai = '󱢆',
+    codestral = '󱎥',
+    gemini = '',
+    Groq = '',
+    Openrouter = '󱂇',
+    Ollama = '󰳆',
+    ['Llama.cpp'] = '󰳆',
+    Deepseek = ''
+}
+local source_icons = {
+    minuet = '󱗻',
+    orgmode = '',
+    otter = '󰼁',
+    nvim_lsp = '',
+    lsp = '',
+    buffer = '',
+    luasnip = '',
+    snippets = '',
+    path = '',
+    git = '',
+    tags = '',
+    cmdline = '󰘳',
+    latex_symbols = '',
+    cmp_nvim_r = '󰟔',
+    codeium = '󰩂',
+    -- FALLBACK
+    fallback = '󰜚',
+}
+{{ end -}}
 return {
 {{ if eq .location "client" -}}
 {
@@ -121,9 +154,211 @@ return {
   },
 },
 {{ else -}}
-  'ggml-org/llama.vim',
-  vim.g.llama_config = {
-    show_info = false
+  {
+    "milanglacier/minuet-ai.nvim",
+    config = function()
+      require('blink-cmp').setup {
+        appearance = {
+            use_nvim_cmp_as_default = true,
+            nerd_font_variant = 'normal',
+            kind_icons = kind_icons
+        },
+        completion = {
+          menu = {
+              draw = {
+                  columns = {
+                      { 'label', 'label_description', gap = 1 },
+                      { 'kind_icon', 'kind' },
+                      { 'source_icon' },
+                  },
+                  components = {
+                      source_icon = {
+                          -- don't truncate source_icon
+                          ellipsis = false,
+                          text = function(ctx)
+                              return source_icons[ctx.source_name:lower()] or source_icons.fallback
+                          end,
+                          highlight = 'BlinkCmpSource',
+                      },
+                  },
+              },
+          },
+        },
+      }
+      require("minuet").setup({
+        provider = "openai_fim_compatible",
+        n_completions = 1, -- recommend for local model for resource saving
+        add_single_line_entry = false,
+        -- I recommend beginning with a small context window size and incrementally
+        -- expanding it, depending on your local computing power. A context window
+        -- of 512, serves as an good starting point to estimate your computing
+        -- power. Once you have a reliable estimate of your local computing power,
+        -- you should adjust the context window to a larger value.
+        context_window = 512,
+        provider_options = {
+          openai_fim_compatible = {
+            api_key = "TERM",
+            name = "Ollama",
+            end_point = "http://localhost:11434/v1/completions",
+            model = "qwen2.5-coder",
+            optional = {
+              max_tokens = 56,
+              top_p = 0.9,
+            },
+          },
+        },
+      })
+    end,
+  },
+  {
+    "saghen/blink.cmp",
+    optional = true,
+    dependencies = { 
+      "milanglacier/minuet-ai.nvim",
+      "Kaiser-Yang/blink-cmp-avante",
+    },
+    opts = {
+      appearance = {
+        use_nvim_cmp_as_default = true,
+        nerd_font_variant = 'normal',
+        kind_icons = kind_icons
+      },
+      completion = {
+        menu = {
+          draw = {
+            columns = {
+              { 'label', 'label_description', gap = 1 },
+              { 'kind_icon', 'kind' },
+              { 'source_icon' },
+            },
+            components = {
+              source_icon = {
+                -- don't truncate source_icon
+                ellipsis = false,
+                text = function(ctx)
+                  return source_icons[ctx.source_name:lower()] or source_icons.fallback
+                end,
+                highlight = 'BlinkCmpSource',
+              },
+            },
+          },
+        },
+      },
+      sources = {
+        default = { "avante", "minuet" },
+        providers = {
+          minuet = { 
+            name = "minuet",
+            module = "minuet.blink",
+            score_offset = 100,
+          },
+          avante = {
+              module = 'blink-cmp-avante',
+              name = 'Avante',
+              opts = {
+                  -- options for blink-cmp-avante
+              }
+          }
+        },
+      },
+    },
+  },
+  {
+    "yetone/avante.nvim",
+    -- if you want to build from source then do `make BUILD_FROM_SOURCE=true`
+    -- ⚠️ must add this setting! ! !
+    build = function()
+      -- conditionally use the correct build system for the current OS
+      if vim.fn.has("win32") == 1 then
+        return "powershell -ExecutionPolicy Bypass -File Build.ps1 -BuildFromSource false"
+      else
+        return "make"
+      end
+    end,
+    event = "VeryLazy",
+    version = false, -- Never set this value to "*"! Never!
+    ---@module 'avante'
+    ---@type avante.Config
+    opts = {
+      -- add any opts here
+      -- for example
+      input = {
+        provider = "snacks",
+        provider_opts = {
+          -- Additional snacks.input options
+          title = "Avante Input",
+          icon = " ",
+        },
+      },
+      provider = "ollama",
+      providers = {
+        ollama = {
+          endpoint = "http://localhost:11434",
+          model = "qwen2.5-coder",
+        },
+      },
+      {
+        -- system_prompt as function ensures LLM always has latest MCP server state
+        -- This is evaluated for every message, even in existing chats
+        system_prompt = function()
+            local hub = require("mcphub").get_hub_instance()
+            return hub and hub:get_active_servers_prompt() or ""
+        end,
+        -- Using function prevents requiring mcphub before it's loaded
+        custom_tools = function()
+            return {
+                require("mcphub.extensions.avante").mcp_tool(),
+            }
+        end,
+      }
+    },
+    dependencies = {
+      "nvim-lua/plenary.nvim",
+      "MunifTanjim/nui.nvim",
+      --- The below dependencies are optional,
+      "echasnovski/mini.pick", -- for file_selector provider mini.pick
+      "nvim-telescope/telescope.nvim", -- for file_selector provider telescope
+      "hrsh7th/nvim-cmp", -- autocompletion for avante commands and mentions
+      "ibhagwan/fzf-lua", -- for file_selector provider fzf
+      "stevearc/dressing.nvim", -- for input provider dressing
+      "folke/snacks.nvim", -- for input provider snacks
+      "nvim-tree/nvim-web-devicons", -- or echasnovski/mini.icons
+      {
+        -- support for image pasting
+        "HakonHarnes/img-clip.nvim",
+        event = "VeryLazy",
+        opts = {
+          -- recommended settings
+          default = {
+            embed_image_as_base64 = false,
+            prompt_for_file_name = false,
+            drag_and_drop = {
+              insert_mode = true,
+            },
+            -- required for Windows users
+            use_absolute_path = true,
+          },
+        },
+      },
+      {
+        -- Make sure to set this up properly if you have lazy=true
+        'MeanderingProgrammer/render-markdown.nvim',
+        opts = {
+          file_types = { "markdown", "Avante" },
+        },
+        ft = { "markdown", "Avante" },
+      },
+    },
+  },
+  {
+    "ravitemer/mcphub.nvim",
+    dependencies = {
+        "nvim-lua/plenary.nvim",
+    },
+    build = "npm install -g mcp-hub@latest",  -- Installs `mcp-hub` node binary globally
+    config = function()
+        require("mcphub").setup()
+    end
   },
 {{ end }}
 }
