--- a/dot_config/nvim/lua/plugins/ai.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/ai.lua.tmpl
@@ -187,6 +187,7 @@ return {
       }
       require("minuet").setup({
         provider = "openai_fim_compatible",
+        -- provider = "gemini",
         n_completions = 1, -- recommend for local model for resource saving
         add_single_line_entry = false,
         -- I recommend beginning with a small context window size and incrementally
@@ -204,6 +205,29 @@ return {
             optional = {
               max_tokens = 56,
               top_p = 0.9,
+            },
+          },
+          gemini = {
+            end_point = 'https://generativelanguage.googleapis.com/v1beta/models',
+            optional = {
+              generationConfig = {
+                maxOutputTokens = 256,
+                -- When using `gemini-2.5-flash`, it is recommended to entirely
+                -- disable thinking for faster completion retrieval.
+                thinkingConfig = {
+                    thinkingBudget = 0,
+                },
+            },
+            safetySettings = {
+                {
+                    -- HARM_CATEGORY_HATE_SPEECH,
+                    -- HARM_CATEGORY_HARASSMENT
+                    -- HARM_CATEGORY_SEXUALLY_EXPLICIT
+                    category = 'HARM_CATEGORY_DANGEROUS_CONTENT',
+                    -- BLOCK_NONE
+                    threshold = 'BLOCK_ONLY_HIGH',
+                },
+            },
             },
           },
         },
@@ -264,6 +288,22 @@ return {
     },
   },
   {
+    "ravitemer/mcphub.nvim",
+    dependencies = {
+        "nvim-lua/plenary.nvim",
+    },
+    build = "npm install -g mcp-hub@latest",  -- Installs `mcp-hub` node binary globally
+    config = function()
+        require("mcphub").setup({
+        extensions = {
+            avante = {
+                make_slash_commands = true, -- make /slash commands from MCP server prompts
+            }
+        }
+      })
+    end
+  },
+  {
     "yetone/avante.nvim",
     -- if you want to build from source then do `make BUILD_FROM_SOURCE=true`
     -- ⚠️ must add this setting! ! !
@@ -291,11 +331,12 @@ return {
         },
       },
       provider = "ollama",
+      -- provider = "gemini",
       providers = {
-        ollama = {
-          endpoint = "http://localhost:11434",
-          model = "qwen2.5-coder",
-        },
+          ollama = {
+            endpoint = "http://localhost:11434",
+            model = "qwen2.5-coder",
+          },
       },
       {
         -- system_prompt as function ensures LLM always has latest MCP server state
@@ -324,23 +365,6 @@ return {
       "folke/snacks.nvim", -- for input provider snacks
       "nvim-tree/nvim-web-devicons", -- or echasnovski/mini.icons
       {
-        -- support for image pasting
-        "HakonHarnes/img-clip.nvim",
-        event = "VeryLazy",
-        opts = {
-          -- recommended settings
-          default = {
-            embed_image_as_base64 = false,
-            prompt_for_file_name = false,
-            drag_and_drop = {
-              insert_mode = true,
-            },
-            -- required for Windows users
-            use_absolute_path = true,
-          },
-        },
-      },
-      {
         -- Make sure to set this up properly if you have lazy=true
         'MeanderingProgrammer/render-markdown.nvim',
         opts = {
@@ -350,15 +374,6 @@ return {
       },
     },
   },
-  {
-    "ravitemer/mcphub.nvim",
-    dependencies = {
-        "nvim-lua/plenary.nvim",
-    },
-    build = "npm install -g mcp-hub@latest",  -- Installs `mcp-hub` node binary globally
-    config = function()
-        require("mcphub").setup()
-    end
-  },
+  
 {{ end }}
 }
