change password manager install

--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -42,20 +42,10 @@ cask {{ . | quote }}
 {{  end -}}
 EOF
 {{ else -}}
-  curl -sS https://downloads.1password.com/linux/keys/1password.asc |
-    sudo gpg --dearmor --output /usr/share/keyrings/1password-archive-keyring.gpg &&
-    echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/1password-archive-keyring.gpg] https://downloads.1password.com/linux/debian/$(dpkg --print-architecture) stable main" |
-    sudo tee /etc/apt/sources.list.d/1password.list &&
-    sudo mkdir -p /etc/debsig/policies/AC2D62742012EA22/ &&
-    curl -sS https://downloads.1password.com/linux/debian/debsig/1password.pol |
-    sudo tee /etc/debsig/policies/AC2D62742012EA22/1password.pol &&
-    sudo mkdir -p /usr/share/debsig/keyrings/AC2D62742012EA22 &&
-    curl -sS https://downloads.1password.com/linux/keys/1password.asc |
-    sudo gpg --dearmor --output /usr/share/debsig/keyrings/AC2D62742012EA22/debsig.gpg &&
     sudo apt update &&
     sudo apt install -y {{ join " " .packages.core.apt }} {{ join " " .packages.server.apt }}
 {{ end -}}
-eval $(op account add --address my.1password.com --email sdickinson@gmail.com --secret-key {{ .opsecret }} --signin)
+eval $(op account add --address my.1password.com --email {{ .oplogin }} --secret-key {{ .opsecret }} --signin)
 
 {{ if and (eq .chezmoi.os "linux") (.chezmoi.kernel.osrelease | lower | contains "microsoft") -}}
     sudo add-apt-repository ppa:wslutilities/wslu
