--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -20,3 +20,5 @@
     geminikey = {{ $geminikey | quote }}
 [onepassword]
     prompt = false
+[hooks.read-source-state.pre]
+    command = ".local/share/chezmoi/.install-password-manager.sh"
