--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -21,4 +21,4 @@
 [onepassword]
     prompt = false
 [hooks.read-source-state.pre]
-    command = ".local/share/chezmoi/.install-password-manager.sh"
+    command = "sh .local/share/chezmoi/.install-password-manager.sh"
