add ice menubar app and only have gemini for home useage

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -4,7 +4,6 @@
 {{- $location := promptChoiceOnce . "location" "Location" $choices -}}
 {{- $oplogin := promptStringOnce . "oplogin" "1Password login" -}}
 {{- $opsecret := promptStringOnce . "opsecret" "1Password secret key" -}}
-{{- $geminikey := promptStringOnce . "geminikey" "Gemini API Key" -}}
 [git]
   autoCommit = true
   autoPush = true
@@ -17,7 +16,10 @@
     location = {{ $location | quote }}
     oplogin = {{ $oplogin | quote }}
     opsecret = {{ $opsecret | quote }}
+{{- if eq $location "home"}}
+{{- $geminikey := promptStringOnce . "geminikey" "Gemini API Key" -}}
     geminikey = {{ $geminikey | quote }}
+{{- end }}
 [onepassword]
     prompt = false
 [hooks.read-source-state.pre]
