--- a/dot_config/nvim/lua/plugins/ai.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/ai.lua.tmpl
@@ -279,9 +279,7 @@ return {
           avante = {
               module = 'blink-cmp-avante',
               name = 'Avante',
-              opts = {
-                  -- options for blink-cmp-avante
-              }
+              opts = { }
           }
         },
       },
@@ -307,18 +305,9 @@ return {
     "yetone/avante.nvim",
     -- if you want to build from source then do `make BUILD_FROM_SOURCE=true`
     -- ⚠️ must add this setting! ! !
-    build = function()
-      -- conditionally use the correct build system for the current OS
-      if vim.fn.has("win32") == 1 then
-        return "powershell -ExecutionPolicy Bypass -File Build.ps1 -BuildFromSource false"
-      else
-        return "make"
-      end
-    end,
+    build = "make",
     event = "VeryLazy",
     version = false, -- Never set this value to "*"! Never!
-    ---@module 'avante'
-    ---@type avante.Config
     opts = {
       -- add any opts here
       -- for example
@@ -373,7 +362,6 @@ return {
         ft = { "markdown", "Avante" },
       },
     },
-  },
-  
+  }
 {{ end }}
 }
