--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -151,7 +151,7 @@ setopt always_to_end
 # eval "$(starship init zsh)"
 # eval "$(oh-my-posh init zsh)"
 # eval "$(oh-my-posh init zsh --config ~/.config/multiverse-neon.omp.json)"
-eval "$(oh-my-posh init zsh --config ~/.config/slim.omp.json)"
+eval "$(oh-my-posh init zsh --config ~/.config/catppuccin_mocha.omp.json)"
 bindkey              '^I' menu-select
 bindkey "$terminfo[kcbt]" menu-select
 bindkey -M menuselect '^o' accept-and-infer-next-history
