--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -51,7 +51,7 @@ export CPPFLAGS="$CPPFLAGS -I/usr/local/opt/ruby/include"
 export PKG_CONFIG_PATH="$PKG_CONFIG_PATH:/usr/local/opt/ruby/lib/pkgconfig"
 {{ end }}
 export TERM=xterm-256color
-export BAT_THEME=ansi
+export BAT_THEME="Catppuccin Mocha"
 
 if command -v bat 2>&1 >/dev/null; then
   alias cat="bat"
