--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -111,6 +111,7 @@ zle -N menu-search
 zle -N recent-paths
 # zstyle -a ':autocomplete::compinit' arguments -u
 zstyle '*:compinit' arguments -D -i -u -C -w
+source ~/.zsh/catppuccin_mocha-zsh-syntax-highlighting.zsh
 source $BREWPATH/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 source $BREWPATH/share/zsh-autocomplete/zsh-autocomplete.plugin.zsh
 source $BREWPATH/share/zsh-autosuggestions/zsh-autosuggestions.zsh
