Add .config/zsh/catppuccin-fzf-mocha.sh Update .zshrc

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -111,7 +111,8 @@ zle -N menu-search
 zle -N recent-paths
 # zstyle -a ':autocomplete::compinit' arguments -u
 zstyle '*:compinit' arguments -D -i -u -C -w
-source ~/.zsh/catppuccin_mocha-zsh-syntax-highlighting.zsh
+source ~/.config/zsh/catppuccin_mocha-zsh-syntax-highlighting.zsh
+source ~/.config/zsh/catppuccin-fzf-mocha.sh
 source $BREWPATH/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 source $BREWPATH/share/zsh-autocomplete/zsh-autocomplete.plugin.zsh
 source $BREWPATH/share/zsh-autosuggestions/zsh-autosuggestions.zsh
