--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -4,6 +4,7 @@ export PATH=~/bin:~/.local/bin:/usr/local/opt/vim/bin:/usr/local/opt/ruby/bin:/u
 export BREWPATH=/opt/homebrew
 export PATH=$PATH:$BREWPATH/bin
 export XDG_CACHE_HOME=~/.cache
+export XDG_CONFIG_HOME=~/.config
 {{ if eq .location "home" -}}
 export GEMINI_API_KEY={{ .geminikey }}
 {{ end -}}
