--- a/dot_config/nvim/lua/plugins/ai.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/ai.lua.tmpl
@@ -30,6 +30,8 @@ local source_icons = {
     fallback = '󰜚',
 }
 return {
+
+{{- if ne .location "client" -}}
   {
     "yetone/avante.nvim",
     -- if you want to build from source then do `make BUILD_FROM_SOURCE=true`
@@ -94,7 +96,65 @@ return {
       },
     },
   },
+{{- end -}}
 {{- if eq .location "client" -}}
+  {
+      "CopilotC-Nvim/CopilotChat.nvim",
+      opts = function()
+        local user = vim.env.USER or "User"
+        user = user:sub(1, 1):upper() .. user:sub(2)
+        return {
+          auto_insert_mode = true,
+          question_header = "  " .. user .. " ",
+          answer_header = "  Copilot ",
+          window = {
+            width = 0.4,
+          },
+        }
+      end,
+      keys = {
+      { "<c-s>", "<CR>", ft = "copilot-chat", desc = "Submit Prompt", remap = true },
+      { "<leader>a", "", desc = "+ai", mode = { "n", "v" } },
+      {
+        "<leader>aa",
+        function()
+          return require("CopilotChat").toggle()
+        end,
+        desc = "Toggle (CopilotChat)",
+        mode = { "n", "v" },
+      },
+      {
+        "<leader>ax",
+        function()
+          return require("CopilotChat").reset()
+        end,
+        desc = "Clear (CopilotChat)",
+        mode = { "n", "v" },
+      },
+      {
+        "<leader>aq",
+        function()
+          vim.ui.input({
+            prompt = "Quick Chat: ",
+          }, function(input)
+            if input ~= "" then
+              require("CopilotChat").ask(input)
+            end
+          end)
+        end,
+        desc = "Quick Chat (CopilotChat)",
+        mode = { "n", "v" },
+      },
+      {
+        "<leader>ap",
+        function()
+          require("CopilotChat").select_prompt()
+        end,
+        desc = "Prompt Actions (CopilotChat)",
+        mode = { "n", "v" },
+      },
+    },
+  },
   {
     "zbirenbaum/copilot.lua",
     cmd = "Copilot",
