Update .config/ghostty/config Update .zshrc

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -82,7 +82,7 @@ alias nvim-light='NVIM_APPNAME="nvim-light" nvim'
 ## Evals
 eval $(thefuck --alias)
 
-[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # This loads nvm
+[ -s "/opt/homebrew/opt/nvm/nvm.sh" ] && \. "/opt/homebrew/opt/nvm/nvm.sh"  # This loads nvm
 
 ## Functions
 dockerinfo() {
