--- a/dot_config/nvim/lua/plugins/ai.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/ai.lua.tmpl
@@ -87,7 +87,7 @@ return {
       "ibhagwan/fzf-lua", -- for file_selector provider fzf
       "stevearc/dressing.nvim", -- for input provider dressing
       "folke/snacks.nvim", -- for input provider snacks
-      "echasnovski/mini.icons", -- or nvim-tree/nvim-web-devicons
+      "nvim-mini/mini.icons", -- or nvim-tree/nvim-web-devicons
       {
         -- Make sure to set this up properly if you have lazy=true
         'MeanderingProgrammer/render-markdown.nvim',
