--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -112,8 +112,9 @@ zle -N menu-search
 zle -N recent-paths
 # zstyle -a ':autocomplete::compinit' arguments -u
 zstyle '*:compinit' arguments -D -i -u -C -w
-source ~/.config/zsh/catppuccin_mocha-zsh-syntax-highlighting.zsh
-source ~/.config/zsh/catppuccin-fzf-mocha.sh
+# source ~/.config/zsh/catppuccin_mocha-zsh-syntax-highlighting.zsh
+source ~/.config/zsh/gruvbox-zsh-syntax-highlighting.zsh
+source ~/.config/zsh/gruvbox-fzf.sh
 source $BREWPATH/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 source $BREWPATH/share/zsh-autocomplete/zsh-autocomplete.plugin.zsh
 source $BREWPATH/share/zsh-autosuggestions/zsh-autosuggestions.zsh
